@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2011, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2012, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -165,6 +165,9 @@
  * 08-Jun-2009 : Fixed bug in setMouseWheelEnabled() (DG);
  * 06-Jul-2009 : Clear off-screen buffer to fully transparent (DG);
  * 10-Oct-2011 : localization fix: bug #3353913 (MH);
+ * 05-Jul-2012 : Remove reflection for MouseWheelListener - only needed for 
+ *               JRE 1.3.1 (DG);
+ * 
  */
 
 package org.jfree.chart;
@@ -205,9 +208,6 @@ import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.util.EventListener;
 import java.util.Iterator;
 import java.util.List;
@@ -1301,11 +1301,9 @@ public class ChartPanel extends JPanel implements ChartChangeListener,
     }
 
     /**
-     * The mouse wheel handler.  This will be an instance of MouseWheelHandler
-     * but we can't reference that class directly because it depends on JRE 1.4
-     * and we still want to support JRE 1.3.1.
+     * The mouse wheel handler.
      */
-    private Object mouseWheelHandler;
+    private MouseWheelHandler mouseWheelHandler;
 
     /**
      * Returns <code>true</code> if the mouse wheel handler is enabled, and
@@ -1321,9 +1319,6 @@ public class ChartPanel extends JPanel implements ChartChangeListener,
 
     /**
      * Enables or disables mouse wheel support for the panel.
-     * Note that this method does nothing when running JFreeChart on JRE 1.3.1,
-     * because that older version of the Java runtime does not support
-     * mouse wheel events.
      *
      * @param flag  a boolean.
      *
@@ -1331,68 +1326,11 @@ public class ChartPanel extends JPanel implements ChartChangeListener,
      */
     public void setMouseWheelEnabled(boolean flag) {
         if (flag && this.mouseWheelHandler == null) {
-            // use reflection to instantiate a mouseWheelHandler because to
-            // continue supporting JRE 1.3.1 we cannot depend on the
-            // MouseWheelListener interface directly
-            try {
-                Class c = Class.forName("org.jfree.chart.MouseWheelHandler");
-                Constructor cc = c.getConstructor(new Class[] {
-                        ChartPanel.class});
-                Object mwh = cc.newInstance(new Object[] {this});
-                this.mouseWheelHandler = mwh;
-            }
-            catch (ClassNotFoundException e) {
-                // the class isn't there, so we must have compiled JFreeChart
-                // with JDK 1.3.1 - thus, we can't have mouse wheel support
-            }
-            catch (SecurityException e) {
-                e.printStackTrace();
-            }
-            catch (NoSuchMethodException e) {
-                e.printStackTrace();
-            }
-            catch (IllegalArgumentException e) {
-                e.printStackTrace();
-            }
-            catch (InstantiationException e) {
-                e.printStackTrace();
-            }
-            catch (IllegalAccessException e) {
-                e.printStackTrace();
-            }
-            catch (InvocationTargetException e) {
-                e.printStackTrace();
-            }
+            this.mouseWheelHandler = new MouseWheelHandler(this);
         }
         else if (!flag && this.mouseWheelHandler != null) {
-            // use reflection to deregister the mouseWheelHandler
-            try {
-                Class mwl = Class.forName("java.awt.event.MouseWheelListener");
-                Class c2 = ChartPanel.class;
-                Method m = c2.getMethod("removeMouseWheelListener",
-                        new Class[] {mwl});
-                m.invoke(this, new Object[] {this.mouseWheelHandler});
-                this.mouseWheelHandler = null;
-            }
-            catch (ClassNotFoundException e) {
-                // must be running on JRE 1.3.1, so just ignore this
-            }
-            catch (SecurityException e) {
-                e.printStackTrace();
-            }
-            catch (NoSuchMethodException e) {
-                e.printStackTrace();
-            }
-            catch (IllegalArgumentException e) {
-                e.printStackTrace();
-            }
-            catch (IllegalAccessException e) {
-                e.printStackTrace();
-            }
-            catch (InvocationTargetException e) {
-                e.printStackTrace();
-            }
-        }
+            this.removeMouseWheelListener(this.mouseWheelHandler);
+        } 
     }
 
     /**
